# phi

./: .gitignore  CMakeLists.txt  Getting started  Milestones  README.md  Tarefas Phi Editor.txt  Tarefas Phi.txt  cmake_cache_x64.cmake  github_issues.txt  make.bat  make_mingw.bat  make_win64.bat  run_cmake_mingw.bat  run_cmake_win64.bat  run_cmake_win64_mingw_debug.bat  run_cmake_win64_mingw_release.bat  run_cmake_win64_vc++.bat  run_compile_gch.bat  run_compile_gch_debug.bat  run_compile_gch_release.bat  run_make_win64.bat  run_mingw32-make.bat  xcopy_n.bat
content/core/: CMakeLists.txt
content/demo/: CMakeLists.txt
content/io/: CMakeLists.txt
content/loader/: CMakeLists.txt
content/rendering/: CMakeLists.txt
content/ui/: CMakeLists.txt
src/animation/: CMakeLists.txt  animation.cpp  animation.h  animationApi.h  animator.cpp  animator.h  animatorLayerBehaviour.cpp  animatorLayerBehaviour.h  colorAnimation.cpp  colorAnimation.h  easingFunctions.h  emptyMouseClickAnimatable.h  emptyMouseHoverAnimatable.h  floatAnimation.cpp  floatAnimation.h  floatAnimator.cpp  floatAnimator.h  iAnimation.h  iMouseClickAnimatable.h  iMouseHoverAnimatable.h  positionAnimation.cpp  positionAnimation.h  transformAnimation.cpp  transformAnimation.h  translateAnimation.cpp  translateAnimation.h
src/application/: CMakeLists.txt  application.cpp  application.h  applicationApi.h  commandsManager.cpp  commandsManager.h  memoryTracker.cpp  mouseButtonEventDispatcher.h  redoCommand.h  shortcut.h  undoCommand.h  window.cpp  window.h
src/core/: CMakeLists.txt  aabb.cpp  aabb.h  argumentException.cpp  argumentException.h  atlas.cpp  atlas.h  base64.cpp  base64.h  blockingQueue.h  boxCollider.cpp  boxCollider.h  clickComponent.cpp  clickComponent.h  clippingPlane.cpp  clippingPlane.h  clock.cpp  clock.h  color.cpp  color.h  command.h  component.cpp  component.h  core.h  core.natvis  coreApi.h  delegate.h  entity.h  entityRepository.h  eventArgs.h  eventHandler.h  eventSender.h  exception.cpp  exception.h  finitePlane.h  geometry.cpp  geometry.h  geometryData.cpp  ghostMesh.cpp  ghostMesh.h  (+73 more)
src/data/: CMakeLists.txt  dataApi.h  geometryRepository.cpp  geometryRepository.h  imageRepository.cpp  imageRepository.h  importResourceException.h  materialRepository.cpp  materialRepository.h  modelDataService.cpp  modelDataService.h  modelRepository.cpp  modelRepository.h  textureRepository.cpp  textureRepository.h
src/debugRendering/: CMakeLists.txt  boxColliderBoxRenderPass.cpp  boxColliderBoxRenderPass.h  boxColliderLayerBehaviour.cpp  boxColliderLayerBehaviour.h  boxColliderLinesRenderPass.cpp  boxColliderLinesRenderPass.h  boxColliderRenderAdapter.cpp  boxColliderRenderAdapter.h  boxColliderRenderPass.cpp  boxColliderRenderPass.h  debugRenderer.h  debugRenderingApi.h  obbBoxRenderPass.cpp  obbBoxRenderPass.h  obbLayerBehaviour.cpp  obbLayerBehaviour.h  obbLinesRenderPass.cpp  obbLinesRenderPass.h  obbRenderAdapter.cpp  obbRenderAdapter.h  obbRenderPass.cpp  obbRenderPass.h  obbRenderer.h
src/demo/: CMakeLists.txt  SEImporter.cpp  addSceneObjectCommand.cpp  application.cpp  application.h  bunny.cpp  cameraController.h  command.cpp  command.h  commandsManager.cpp  commandsManager.h  defaultCameraController.cpp  defaultCameraController.h  deleteSceneObjectCommand.cpp  demo.h  form.cpp  form.h  fpsCameraController.cpp  inputManager.cpp  inputManager.h  library.cpp  library.h  main.cpp  multiCommand.cpp  redoCommand.cpp  resourcesLoader.cpp  rotateObjectCommand.cpp  screen.cpp  screen.h  selectAtPositionCommand.cpp  selectObjectCommand.cpp  setMaterialCommand.cpp  setSceneObjectVisibilityCommand.cpp  shortcuts.cpp  shortcuts.h  suzanne.cpp  teapot.cpp  translateObjectCommand.cpp  undoCommand.cpp  zoomToFitCommand.cpp
src/demon/: CMakeLists.txt  addObjectCommand.cpp  addObjectCommand.h  cameraController.h  changeContextCommand.h  changeNodeTransformModeCommand.h  command.cpp  command.h  commandsManager.cpp  commandsManager.h  context.cpp  context.h  contextBuilder.cpp  contextBuilder.h  defaultCameraController.cpp  defaultCameraController.h  deleteObjectCommand.cpp  deleteObjectCommand.h  demon.h  demonApi.h  freeMouseDrag.cpp  freeMouseDrag.h  inputManager.cpp  inputManager.h  layer.cpp  layer.h  layerBuilder.cpp  layerBuilder.h  library.cpp  library.h  main.cpp  memoryTracker.cpp  mouseDrag.cpp  mouseDrag.h  obbMouseDrag.cpp  obbMouseDrag.h  planeDrag.cpp  planeDrag.h  planesMouseDrag.cpp  planesMouseDrag.h  (+6 more)
src/diagnostic/: CMakeLists.txt  consoleLoggerDevice.h  diagnosticApi.h  fileUtils.cpp  heapRecorder.cpp  heapRecorder.h  logger.cpp  logger.h  memoryOperation.h  memoryTracker.cpp  memoryTracker.h  platformProcLoader.h  platformProcLoader_win64.cpp  stackSymbol.h  stackTracer.cpp  stackTracer.h  stopwatch.cpp  stopwatch.h  win64DataDefinitions.h  win64ProcLibrary.cpp  win64ProcLibrary.h
src/diagnostics/: CMakeLists.txt  console.cpp  console.h  debugHelp.cpp  debugHelp.h  diagnostics.h  diagnosticsApi.h  fileUtils.cpp  fileUtils.h  logger.cpp  logger.h  loggerDevice.h  memoryTracker.cpp  memoryTracker.h  platformProcLoader.h  platformProcLoader_win64.cpp  stackSymbol.h  stackTracer.cpp  stackTracer.h  stopwatch.cpp  stopwatch.h  win64DataDefinitions.h  win64ProcLibrary.cpp  win64ProcLibrary.h  windowsDataDefinitions.h  windowsProcLoader.cpp  windowsProcLoader.h
src/domain/: CMakeLists.txt  domainApi.h  library.cpp  library.h  project.cpp  project.h
src/io/: CMakeLists.txt  directoryInfo.h  fileInfo.h  fileReader.h  fileReader_win64.cpp  io.h  ioApi.h  path.cpp  path.h  rapidjsonHelper.cpp  rapidjsonHelper.h  watcher.h  watcher_win64.cpp
src/layers/: CMakeLists.txt  layer.h  layerBuilder.cpp  layerBuilder.h  layersApi.h  memoryTracker.cpp  pickingId.cpp  pickingId.h  sceneLayer.h
src/loader/: CMakeLists.txt  SDL_extensions.h  assimpImporter.cpp  assimpImporter.h  exporter.cpp  exporter.h  importResourceException.cpp  importResourceException.h  importer.cpp  importer.h  loader.h  loaderApi.h  meshData.h
src/phi/: CMakeLists.txt  consoleLogger.h  consoleLogger_win64.cpp  logger.h  phi.h  (+3 more)
(+2535 files in other folders)
