cmake_minimum_required(VERSION 3.0.2)

project(phi)

set (CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
set(CMAKE_SUPPRESS_REGENERATION TRUE)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS TRUE)
SET_PROPERTY(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER !CMake)

add_subdirectory(src/phi)
add_subdirectory(src/diagnostics)
add_subdirectory(src/core)
add_subdirectory(src/animation)
add_subdirectory(src/apps)
add_subdirectory(src/io)
add_subdirectory(src/rendering)
add_subdirectory(src/loader)
add_subdirectory(src/ui)
add_subdirectory(src/scenes)
add_subdirectory(src/demon)

add_subdirectory(tests/phiTests)
add_subdirectory(tests/diagnosticsTests)
add_subdirectory(tests/coreTests)
add_subdirectory(tests/animationTests)
add_subdirectory(tests/appsTests)
add_subdirectory(tests/ioTests)
add_subdirectory(tests/renderingTests)
add_subdirectory(tests/loaderTests)
add_subdirectory(tests/uiTests)
add_subdirectory(tests/scenesTests)

set (dlls_dir ${CMAKE_CURRENT_SOURCE_DIR}/libs/${SOLUTION_PLATFORM})
set (library_dir ${CMAKE_CURRENT_SOURCE_DIR}/library)
set (resources_dir ${CMAKE_CURRENT_SOURCE_DIR}/resources)
set (locale_dir ${CMAKE_CURRENT_SOURCE_DIR}/locale)
set (src_dir ${CMAKE_BINARY_DIR}/src)

if (WIN32)
    file(GLOB dll_files ${dlls_dir}/*.dll)
    file(GLOB tlb_files ${dlls_dir}/*.tlb)
elseif(APPLE)
    file(GLOB dll_files ${dlls_dir}/*.*)
endif(WIN32)

file(GLOB image_files ${image_dir}/*.*)

 file(GLOB HOOK_SCRIPTS ./git_hooks/*) 
 if (HOOK_SCRIPTS)
    file(COPY ${HOOK_SCRIPTS} DESTINATION ${CMAKE_SOURCE_DIR}/.git/hooks)
endif (HOOK_SCRIPTS)

set_target_properties(diagnostics PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin/${BIN_FOLDER})
set_target_properties(core PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin/${BIN_FOLDER})
set_target_properties(animation PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin/${BIN_FOLDER})
set_target_properties(io PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin/${BIN_FOLDER})
set_target_properties(rendering PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin/${BIN_FOLDER})
set_target_properties(loader PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin/${BIN_FOLDER})
set_target_properties(scenes PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin/${BIN_FOLDER})
set_target_properties(ui PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin/${BIN_FOLDER})
set_target_properties(apps PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin/${BIN_FOLDER})
set_target_properties(demon PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin/${BIN_FOLDER})

set_target_properties(diagnosticsTests PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin/${BIN_FOLDER})
set_target_properties(coreTests PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin/${BIN_FOLDER})
set_target_properties(animationTests PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin/${BIN_FOLDER})
set_target_properties(ioTests PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin/${BIN_FOLDER})
set_target_properties(renderingTests PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin/${BIN_FOLDER})
set_target_properties(loaderTests PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin/${BIN_FOLDER})
set_target_properties(scenesTests PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin/${BIN_FOLDER})
set_target_properties(uiTests PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin/${BIN_FOLDER})
set_target_properties(appsTests PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin/${BIN_FOLDER})

if (MSVC)
    foreach(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
        string(TOLOWER ${OUTPUTCONFIG} OUTPUTCONFIG)
        set (bin_dir ${CMAKE_CURRENT_SOURCE_DIR}/bin/${BIN_FOLDER}/${OUTPUTCONFIG})
        
        install(FILES ${dll_files} DESTINATION ${bin_dir} CONFIGURATIONS ${OUTPUTCONFIG})
        install(DIRECTORY ${resources_dir} DESTINATION ${bin_dir} CONFIGURATIONS ${OUTPUTCONFIG})
        install(DIRECTORY ${library_dir} DESTINATION ${bin_dir} CONFIGURATIONS ${OUTPUTCONFIG})
        install(DIRECTORY ${locale_dir} DESTINATION ${bin_dir} CONFIGURATIONS ${OUTPUTCONFIG})
    endforeach(OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES)
    
else()
        set (bin_dir ${CMAKE_CURRENT_SOURCE_DIR}/bin/${BIN_FOLDER})
        install(FILES ${dll_files} DESTINATION ${bin_dir})
        install(DIRECTORY ${resources_dir} DESTINATION ${bin_dir})
        install(DIRECTORY ${library_dir} DESTINATION ${bin_dir})
        install(DIRECTORY ${locale_dir} DESTINATION ${bin_dir})
endif(MSVC)